# assessment-ai-usecase

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
config/: config.py
models/: embeddings.py  llm.py
utils/: rag.py  search.py
